Fixed price and description alignment

--- a/app/assets/stylesheets/_commons.scss
+++ b/app/assets/stylesheets/_commons.scss
@@ -157,6 +157,7 @@
   margin-top: $margin-top-separator;
   justify-content: space-between;
   padding-left: 12px;
+  text-align: center;
 
   .image {
 
@@ -191,7 +192,6 @@
   height: auto;
   background-color: $black;
   @extend .flex-row;
-
 
   .button {
     box-sizing: border-box;
